--- a/css/index.html
+++ b/css/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Custom Golf</title>
 </head>
 <body>
@@ -14,11 +15,16 @@
     <div id="navbar">
         <ul>
             <li class="href="#"><img class="small-logo" src="customgolflogo1.png"alt="small customgolf logo"></li>
-            <li><a href="#">Titleist</a></li>
+            <li><a href="#titleist">Titleist</a></li>
             <li><a href="#">Callaway</a></li>
             <li><a href="#">Ping</a></li>
             <li><a href="#">Cobra</a></li>
         </ul>
+        <script src="script.js"></script>
+    </div>
+    <div class="titleistdriver">
+        <img class="img100-width" id="titleist" src="TitleistTSiDrivers.jpg" alt="TitleistDriver">
+        <h1>Experience new Titleist TSi Drivers</h1>
     </div>
 </body>
 </html>
