changed footer links to link to correct place

--- a/project/index.html
+++ b/project/index.html
@@ -175,7 +175,7 @@
             </div>
         </div>
     <!--Footer-->
-    <footer>SOURCES:  <a href="titleist.com">Titleist</a>  <a href="callawaygolf.com">Callaway</a>  <a href="ping.com">Ping</a>  <a href="cobragolf.com">Cobra</a>  <a href="#">Back to top</a></footer>
+    <footer>SOURCES:  <a href="https://www.titleist.com/">Titleist</a>  <a href="https://www.callawaygolf.com">Callaway</a>  <a href="https://www.ping.com">Ping</a>  <a href="https://www.cobragolf.com">Cobra</a>  <a href="#">Back to top</a></footer>
 
 </body>
 </html>
